--- a/src/components/FAQ/FAQ.module.scss
+++ b/src/components/FAQ/FAQ.module.scss
@@ -320,10 +320,11 @@
     margin-right: 0.7rem;
   }
   @media (max-width: 480px) {
-    width: 1.2rem;
-    height: 1.2rem;
-    font-size: 1rem;
-    margin-right: 0.4rem;
+    width: 1rem;
+    height: 1rem;
+    font-size: 0.7rem;
+    border-width: 1.2px;
+    margin-right: 0.3rem;
   }
 }
 
