--- a/src/components/FAQ/FAQ.module.scss
+++ b/src/components/FAQ/FAQ.module.scss
@@ -263,16 +263,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     margin-right: 0;
-    &::after {
-      content: '';
-      display: block;
-      height: 3px;
-      width: 0;
-      background: linear-gradient(90deg, #DC2626, #ef4444);
-      border-radius: 2px;
-      margin-top: 0.3rem;
-      transition: width 0.35s cubic-bezier(0.4, 0, 0.2, 1);
-    }
+    padding-left: 0.7rem;
   }
   &:hover .questionText::after, &.active .questionText::after {
     width: 60%;
@@ -285,13 +276,13 @@
     padding: 1.1rem 1.2rem 1.1rem 0.9rem;
     font-size: 0.98rem;
     min-height: 40px;
-    .questionText { margin-right: 0.7rem; }
+    .questionText { padding-left: 0.5rem; }
   }
   @media (max-width: 480px) {
     padding: 0.7rem 0.7rem 0.7rem 0.5rem;
     font-size: 0.89rem;
     min-height: 32px;
-    .questionText { margin-right: 0.4rem; }
+    .questionText { padding-left: 0.3rem; }
   }
 }
 
