--- a/src/components/FAQ/FAQ.module.scss
+++ b/src/components/FAQ/FAQ.module.scss
@@ -345,19 +345,19 @@
     margin: 0;
     padding: 0.5rem 0 0 1.2rem;
     position: relative;
-    font-size: 1.08rem;
+    font-size: inherit;
     color: #f3f4f6;
-    font-weight: 400;
-    line-height: 1.7;
+    font-weight: inherit;
+    line-height: inherit;
   }
   @media (max-width: 768px) {
     padding: 0 1.2rem 1.2rem 1.3rem;
-    font-size: 1rem;
+    font-size: 0.98rem;
     &::before { top: 0.5rem; }
   }
   @media (max-width: 480px) {
     padding: 0 0.7rem 1rem 0.9rem;
-    font-size: 0.95rem;
+    font-size: 0.89rem;
     line-height: 1.6;
     &::before { top: 0.3rem; }
     p { padding: 0.3rem 0 0 0.7rem; }
